--- a/common/src/main/res/values-v31/colors.xml
+++ b/common/src/main/res/values-v31/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+  <color name="dynamic_primary40">@color/material_dynamic_primary40</color>
   <color name="cover_dynamic_neutral10">@color/material_dynamic_neutral10</color>
   <color name="cover_dynamic_neutral30">@color/material_dynamic_neutral30</color>
   <color name="cover_dynamic_neutral40">@color/material_dynamic_neutral40</color>
