--- a/app/src/main/res/layout/bookmark.xml
+++ b/app/src/main/res/layout/bookmark.xml
@@ -3,6 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:fitsSystemWindows="true"
   android:background="?android:windowBackground"
   android:focusableInTouchMode="true"
   android:orientation="vertical">
